--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ before_install:
     - sudo apt-get install libleveldb-dev
 install:
     - go get github.com/peterbourgon/diskv
-    - go get github.com/jmhodges/levigo_leveldb_1.4
+    - go get github.com/jmhodges/levigo
     - go get github.com/voxelbrain/goptions
     - go get github.com/feyeleanor/atomiser
 after_script:
