--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: go
 before_install:
-    - sudo add-apt-repository ppa:ceph-ubuntu/dev
+    - sudo add-apt-repository -y ppa:ceph-ubuntu/dev
     - sudo apt-get install libleveldb-dev
 install:
     - go get github.com/peterbourgon/diskv
