huh? travis-ci acts up weird.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,6 @@ install:
     - go get github.com/feyeleanor/atomiser
     - go get github.com/syndtr/goleveldb/leveldb
     - go get code.google.com/p/snappy-go/snappy
+    - go get github.com/akrennmair/epos
 after_script:
     - go test -bench='.*'
